tests/ui/internal/unstable-feature.rs
#![feature(impl_stability)] 

#[allow_unstable_feature]  //~ ERROR `allow_unstable_feature` expects a list of feature names
fn main() {

}